# david_rusttx

./: Cargo.toml  debug.ppm  image  image.ppm  image1.ppm  image10.ppm  image2.ppm  image3.ppm  image4.ppm  image5.ppm  image6.ppm  image7.ppm  image8.ppm  image9.ppm  image_output.ppm  image_output_.ppm  pdf_image.ppm  test.html
finalized_images/: random_spheres.ppm
release/: mac-arm-version  mac-x86-version
src/: camera.rs  live_render.rs  main.rs  multithreading.rs  rtw_image.rs  rtweekend.rs  scenes.rs  winsdl.rs
src/hittables/: hittable.rs  hittable_list.rs  mod.rs  rotate_y.rs  translate.rs
src/hittables/objects/: mod.rs  quad.rs  sphere.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropical.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/math_structures/: aabb.rs  bvh.rs  color.rs  interval.rs  mod.rs  onb.rs  ray.rs  vec3.rs
src/pdf/: cosine_pdf.rs  hittable_pdf.rs  mixture_pdf.rs  mod.rs  pdf.rs  sphere_pdf.rs
src/scenes/: chat_scene.rs  cornell_box_scene.rs  cornell_smoke_scene.rs  diff_final_scene.rs  earth_in_a_ball.rs  earth_scene.rs  final_scene.rs  jay_patel_scene.rs  mod.rs  purple_cornell_box_scene.rs  quads_scene.rs  random_spheres_scene.rs  simple_list_scene.rs  two_perlin_spheres_scene.rs  two_spheres_scene.rs
src/textures/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  solid_color.rs  texture.rs
src/textures/noise_generation/: perlin.rs
src/volume/: constant_medium.rs  gpu_work.rs  mod.rs
