[package]
name = "rtx_in_a_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.13"
image = "0.25.1"
indicatif = "0.17.8"
rand = "0.9.0-alpha.1"
futures = { version = "0.3.30", features = ["thread-pool"] }
threadpool = "1.8.1"
sorted-vec = "0.8.3"
gl = "0.14.0"
sdl2 = { verson = "0.36.0",features = ["bundled"] }
